--- a/styler.css
+++ b/styler.css
@@ -10,9 +10,6 @@ body {
 .cima{
     padding: 80px;
     background-color:rgb(200, 131, 230);
-    /* background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -139,8 +136,8 @@ h6 {
     height: 50px;
 }
 
-video {
-    margin-top: 46%;
+.ft {
+    margin-top: 48%;
     margin-left: 5%;
 }
 
